# dotfiles

./: .envrc  .gitignore  .gitmodules  .sops.yaml  LICENSE  README.md  alejandra.toml  flake.nix  home.nix  install.sh  nixOnDroidConfigurations.nix  nixosConfigurations.nix  outputs.nix  overlays.nix  result  secrets.json  starship.toml  system.nix  tmux.conf  variables.nix
ags/: config.js  default.nix  style.css
alacritty/: alacritty.toml  alacritty.yml  default.nix
base/: default.nix  home.nix  localization.nix  packages.nix
fastfetch/: shell-greeting.jsonc
firefox/: README.md  default.nix
fish/: config.fish  default.nix
home/: default.nix  neovim.nix
hosts/: default.nix  lib.nix  readme.nix
hypr/: default.nix  hardware.conf  hyprland.conf  hyprlock.conf  keybinds.conf  workspaces.conf
hyprland/: default.nix  hyprland.conf  hyprlock.conf  keybinds.conf
lib/: configure.nix  default.nix  getPkgs.nix  hexToRgb.nix  home-symlink.nix  mkAutostartList.nix  mkRelativePath.nix  mkReverseProxy.nix  mkSymlink.nix  recursiveMerge.nix  toHyprlang.nix
modules/: default.nix  direnv.nix  sops.nix  work.nix
modules2/: default.nix
neovim/: default.nix  lazy-lock.json
other/: autostart.sh
overlays/: adi1090x-plymouth-themes.nix  caelestia-cli.nix  default.nix  displaylink.nix  evdi.nix  hyprland.nix  hytale.nix  immich.nix  inputs.nix  localPkgs.nix  statix.nix  tailscale.nix  tandoor-recipes.nix  teams.nix  terraria.nix  (+3 more)
templates/python/: README.md  flake.nix  pyproject.toml
templates/python/src/: main.py
templates/python/tests/: test_main.py
(+871 files in other folders)
