[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
dependencies = ["numpy"]
keywords = []
name = "package"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[project.scripts]
package = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
